--- a/etc/openresty/nginx.conf
+++ b/etc/openresty/nginx.conf
@@ -39,7 +39,7 @@ http {
 
     proxy_buffer_size 4k;  # アップストリームサーバからの最初のレスポンス部分（通常はヘッダー）をバッファリングするためのバッファのサイズ。
     proxy_buffers 100 32k;  # 32KB * 100 = 3200KB。のアップストリームサーバからのレスポンスボディをバッファリングするためのバッファの数とサイズ。
-    proxy_busy_buffers_size 3200k;  # バッファがいっぱいになった場合に、アップストリームサーバからのレスポンスを待機させるためのバッファのサイズ。アップストリームからの応答が高速だが、クライアントがデータを遅く受信する場合に有効。
+    proxy_busy_buffers_size 640k;  # バッファがいっぱいになった場合に、アップストリームサーバからのレスポンスを待機させるためのバッファのサイズ。アップストリームからの応答が高速だが、クライアントがデータを遅く受信する場合に有効。
 
     # Proxy cache 設定。使いどころがあれば。1mでkey8,000個。1gまでcache。
     # proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=zone1:1m max_size=1g inactive=1h;
@@ -66,12 +66,12 @@ http {
                                 '"response_time":"$upstream_response_time",'
                                 '"vhost":"$host",'
                                 '"request_id":"$request_id",'
-                                '"trace_id":"$trace_id"}';
+                                '"trace_id":"$cookie__trace_id"}';
 
     access_log  /home/isucon/log/nginx/access.log json;
     error_log  /home/isucon/log/nginx/error.log;
 
-    proxy_set_header X-Request-Id $request_id;
+    proxy_set_header X-Request-ID $request_id;
 
     # TLS configuration
     ssl_protocols TLSv1.2;
