--- a/etc/openresty/nginx.conf
+++ b/etc/openresty/nginx.conf
@@ -28,14 +28,15 @@ http {
     open_file_cache_min_uses 2;  # よくアクセスされるファイルのみをキャッシュすることで、キャッシュの効率を向上させることができる。
     open_file_cache_errors on;  # エラー結果もキャッシュすることで繰り返し同じエラーが発生するのを防ぐ
 
-    gzip on;
-    gzip_types text/css text/javascript application/javascript application/x-javascript application/json;
+    gzip on; # 静的ファイルのリアルタイム圧縮を有効にする。gzip_staticとは競合しない。
+    gzip_types text/plain text/css text/javascript application/javascript application/x-javascript application/json; # text/htmlはデフォルトで有効なので記述不要
     gzip_min_length 1k;
     gzip_comp_level 6;
     gzip_static on;  # 事前に gzip 圧縮された静的ファイルの提供が有効になる。リクエストがexample.cssの場合、Nginxはexample.css.gzが存在するかどうかを確認し、存在する場合はそれを返す。存在しない場合は、Nginxはexample.cssをgzip圧縮して返す。
     gzip_vary on;
     gzip_buffers 100 32k;  # 32KB * 100 = 3200KB のgzip用バッファを用意する。
     gzip_http_version 1.1;  # HTTP1.0以下を使用する場合、keepaliveが使えないのでgzip圧縮のオーバヘッドが圧縮のメリットを上回る可能性がある。
+    # gzip_proxied any;  # リバースプロキシのレスポンスをgzip圧縮する場合は、anyを指定する。しない場合はoffを指定する。
 
     proxy_buffer_size 4k;  # アップストリームサーバからの最初のレスポンス部分（通常はヘッダー）をバッファリングするためのバッファのサイズ。
     proxy_buffers 100 32k;  # 32KB * 100 = 3200KB。のアップストリームサーバからのレスポンスボディをバッファリングするためのバッファの数とサイズ。
@@ -59,14 +60,15 @@ http {
                                 '"body_bytes":$body_bytes_sent,'
                                 '"referer":"$http_referer",'
                                 '"ua":"$http_user_agent",'
+                                '"accept_encoding":"$http_accept_encoding",'
                                 '"request_time":$request_time,'
                                 '"cache":"$upstream_http_x_cache",'
-                                '"cache_status":"$upstream_http_cache_status",'
+                                '"upstream_http_cache_status":"$upstream_http_cache_status",'
+                                '"upstream_cache_status":"$upstream_cache_status",'
                                 '"runtime":"$upstream_http_x_runtime",'
                                 '"response_time":"$upstream_response_time",'
                                 '"vhost":"$host",'
-                                '"request_id":"$request_id",'
-                                '"trace_id":"$cookie__trace_id"}';
+                                '"request_id":"$request_id"}';
 
     access_log  /home/isucon/log/nginx/access.log json;
     error_log  /home/isucon/log/nginx/error.log;
