--- a/etc/openresty/nginx.conf
+++ b/etc/openresty/nginx.conf
@@ -69,7 +69,8 @@ http {
                                 '"runtime":"$upstream_http_x_runtime",'
                                 '"response_time":"$upstream_response_time",'
                                 '"vhost":"$host",'
-                                '"request_id":"$request_id"}';
+                                '"request_id":"$request_id",'
+                                '"trace_id":"$trace_id"}';
 
     access_log  /home/isucon/log/nginx/access.log json;
     error_log  /home/isucon/log/nginx/error.log;
@@ -77,7 +78,7 @@ http {
     proxy_set_header X-Request-ID $request_id;
 
     # TLS configuration
-    ssl_protocols TLSv1.2;
+    ssl_protocols TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
 
@@ -87,6 +88,11 @@ http {
         require "resty.core"
         local uuid = require 'resty.jit-uuid'
         uuid.seed()
+    }
+
+    map $http_cookie $trace_id {
+        default $request_id;  # trace_id cookieが存在しない場合、request_idを使用
+        "~*trace_id=([^;]+)" $1;  # trace_id cookieが存在する場合、その値を使用
     }
 
     include /home/isucon/etc/openresty/conf.d/*.conf;
